--- a/usr/share/sddm/themes/arcolinux-urbanlifestyle/metadata.desktop
+++ b/usr/share/sddm/themes/arcolinux-urbanlifestyle/metadata.desktop
@@ -7,7 +7,7 @@ License=GPL-3.0-or-later
 Type=sddm-theme
 Version=0.4.2
 Website=https://github.com/arcolinux/arcolinux-sddm-urbanlifestyle
-Screenshot=images/urbanlifestyle.jpg
+Screenshot=preview.jpg
 MainScript=Main.qml
 ConfigFile=theme.conf
 TranslationsDirectory=translations
