update code + wallpaper

--- a/usr/share/sddm/themes/arcolinux-urbanlifestyle/metadata.desktop
+++ b/usr/share/sddm/themes/arcolinux-urbanlifestyle/metadata.desktop
@@ -11,6 +11,6 @@ Screenshot=preview.jpg
 MainScript=Main.qml
 ConfigFile=theme.conf
 TranslationsDirectory=translations
-Email=alfredo.ramos@yandex.com
+Email=alfredo.ramos@protonmail.com
 Theme-Id=arcolinux-urbanlifestyle
 Theme-API=2.6
